--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 		<canvas id="cuadro" width="860" height="860"></canvas>
 		<p>Utilice las Flechas para Moverse por el Mapa</p>
+		<p>Pastillas</p><p id="contador">0</p>
 		<script>
 			inicio();
 		</script>
