Pequeño Resposonsive y arreglo de Imagenes

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Juego de PACMAN</title>
+		<script type="text/javascript" src="js/mapa.js"></script>
 		<script type="text/javascript" src="js/funciones.js"></script>
 		<link rel="stylesheet" href="style/estilos.css">
 	</head>
@@ -10,7 +11,7 @@
 
 		<canvas id="cuadro" width="860" height="860"></canvas>
 		<p>Utilice las Flechas para Moverse por el Mapa</p>
-		<p>Pastillas</p><p id="contador">0</p>
+		<p id="contador">0</p>
 		<script>
 			inicio();
 		</script>
